@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-20T00:59:55Z",
+  "timestamp" : "2024-08-21T01:00:02Z",
   "count_outdated" : 492,
   "uniques_outdated" : 319,
-  "count" : 495,
-  "uniques" : 322,
+  "count" : 496,
+  "uniques" : 323,
   "clones" : [
     {
       "timestamp": "2024-08-15T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-08-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
